--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "prisma": {
-    "schema": "./prisma"
+    "schema": "./prisma",
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
     "@nestjs/common": "11.0.1",
     "@nestjs/config": "4.0.2",
     "@nestjs/core": "11.0.1",
     "@nestjs/platform-express": "11.0.1",
-    "@prisma/client": "^6.9.0",
+    "@prisma/client": "6.9.0",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.1"
   },
